--- a/EQ2CollQuests/Properties/Resources.resx
+++ b/EQ2CollQuests/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CharacterPage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CharacterPage.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="EQ2CollQuests" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EQ2CollQuests.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="ExpertMultExpl" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ExpertMultExpl.rtf;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
